--- a/static/css/principal.css
+++ b/static/css/principal.css
@@ -2,16 +2,27 @@
     box-sizing: border-box;
 }
 body {
-    background-color: #f5f5f5;
-    transition: background-image 0.3s ease;
+    position: relative;
     min-height: 100vh;
+}
+
+body::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000;
+    opacity: 0.7; 
+    z-index: -1; 
 }
 
 .container, .table-container {
     border-radius: 8px;
     padding: 20px;
     margin: 20px;
-    box-shadow: 0 0 10px rgb(248, 146, 89);
+    box-shadow: 0 0 10px #3b82f6;
 }
 
 h1{
