--- a/static/css/tabla.css
+++ b/static/css/tabla.css
@@ -14,7 +14,7 @@ body {
 table {
     width: 100%;
     border-collapse: collapse;
-    box-shadow: 0 0 10px rgb(248, 146, 89);
+    box-shadow: 0 0 10px #3b82f6;
      border-bottom: 3px solid #ffffff;
 }
 th, td {
