--- a/templates/kanban.html
+++ b/templates/kanban.html
@@ -16,11 +16,13 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
+
+
     </head>
 
     <body>
         <header>
-            <!-- place navbar here -->
+            
         </header>
         <main   >
             <div class="container">
@@ -60,6 +62,10 @@
 
         <!-- jsDelivr :: Sortable :: Latest (https://www.jsdelivr.com/package/npm/sortablejs) -->
         <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
+
+        <script src="{{ url_for('static', filename='js/scripts.js') }}" defer></script>
+
+        <script src="{{ url_for('static', filename='js/reloj.js') }}" defer></script>
 
         <!-- Bootstrap JavaScript Libraries -->
         <script
